--- a/New_CV.html
+++ b/New_CV.html
@@ -239,17 +239,28 @@
     <section class="contact" id="contact">
       <h1>Mes réseaux :</h1>
       <div class="content">
+        
+        <div class="tel">
+          <a href="tel: +33651556797"><i class="fa-solid fa-phone"></i></a>
+        </div>
+
         <div class="mail">
           <a href="mailto:AvidanB1704@gmail.com"> <i class="fa-solid fa-envelope"></i></a>
         </div>
+
         <div class="linkedin">
           <a href="https://www.linkedin.com/in/avidan-benguigui-a0aa23220/" target="_blank">
             <a href="https://www.linkedin.com/in/avidan-benguigui-a0aa23220/"><i class="fa-brands fa-linkedin"></i> </a>
           </a>
         </div>
-        <div class="tel">
-          <a href="tel: +33651556797"><i class="fa-solid fa-phone"></i></a>
+
+        <div class="github">
+          <a href="https://github.com/Vidocq17"><i class="fa-brands fa-github"></i></a>
         </div>
+
+        <fiv class="figma">
+          <a href="https://www.figma.com/files/recent?fuid=1207641079159981758"><i class="fa-brands fa-figma"></i></a>
+        </fiv>
       </div>
     </section>
 
